# recurrences

./: .prettierignore  .prettierrc  LICENSE  package.json  svelte.config.js
.github/workflows/: build-and-deploy.yml
python/: .gitignore  README.md  optimize.py  plan.txt  pyproject.toml  solve_recurrence.py  wis.json
python/recurrences/: __init__.py  __main__.py  formatter.py  formatter_test.py  integration_test.py  parser.py  parser_test.py  solver.py  solver_test.py  types.py  types_test.py  utils.py  utils_test.py
rust/: Cargo.toml
rust/src/: lib.rs  list_coloring_utils.rs  main.rs  star_utils.rs
src/: hooks.server.ts
src/lib/: glpk-instance.ts  persistent-state.svelte.ts  polynomial-system-solver.test.ts  polynomial-system-solver.ts  recurrence-solver.test.ts  recurrence-solver.ts  root-finding.test.ts  root-finding.ts  sobol.ts  utils.ts  vector-optimizer-manager.ts  vector-optimizer-worker.ts  vector-optimizer.ts
src/lib/coloring/: 3coloring-rules.test.ts  3coloring-rules.ts  canon.ts  feature-space.ts  featureSpace.ts  graph-utils.test.ts  graph-utils.ts  graph.test.ts  graph.ts  measure.ts  parse-situations.ts  proper-coloring.test.ts  proper-coloring.ts  rule-engine.ts  star-graph-canonization.test.ts  star-graph-canonization.ts  star-graph-enumeration.test.ts  star-graph-enumeration.ts
src/lib/components/: BasicSubscripts.svelte  GraphView.svelte  RecurrenceCard.svelte
src/rocq/: ExhaustivenessProof.v
src/routes/: +layout.svelte  +page.svelte  RecurrenceCard.svelte  global.d.ts
src/routes/coloring/: +page.svelte  coloring-logic.ts  worker.ts  (+2 more)
(+6 files in other folders)
