[project]
name = "recurrences"
version = "0.1.0"
description = "Parse and solve recurrence relations to find asymptotic growth rates"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["recurrence", "asymptotics", "complexity", "algorithm", "big-o"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy",
    "scipy",
    "regex",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
]

[project.scripts]
solve_recurrence = "solve_recurrence:main"
optimize = "optimize:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["recurrences*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = true
